# legion-mcp

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  README.md  mcp_server.py  pyproject.toml
.uv/: config.toml
src/database_mcp/: __main__.py  mcp_server.py
tests/: conftest.py  test_db_tools.py  test_multi_database.py  test_query_execution.py
