[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "database-mcp"
version = "0.1.4"
authors = [
  { name="Legion AI", email="luke@thelegionai.com" },
]
readme = "README.md"
description = "A MCP server that helps access and query data in various popular databases"
requires-python = ">=3.10"
dependencies = [
    "legion-query-runner>=0.1.3",
    "python-dotenv>=1.0.0",
    "mcp>=1.0.0",
]
license = "GPL-3.0-or-later"

[project.scripts]
database-mcp = "database_mcp.mcp_server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.2",
    "mcp[cli]>=1.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/TheRaLabs/legion-mcp"